--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -5,11 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/info_"
-        android:text="Info"
-        android:textSize="50pt"
-        android:gravity="center"
+    <WebView
+        android:id="@+id/info_WebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+    </WebView>
 </LinearLayout>
